--- a/index.html
+++ b/index.html
@@ -8,45 +8,51 @@
   <style>
     :root{
       --brand:#6f57e9; --brand2:#3b2eca; --ink:#191b22; --muted:#6d7486;
-      --bg:#0f1117; --card:#11131a; --line:#222533; --shadow:0 10px 30px rgba(0,0,0,.35);
-      --ok:#12a274; --warn:#f59e0b; --bad:#ef4444; --chip:#2b2f40;
+      --bg:#0f1117; --card:#11131a; --line:#222533; --shadow:0 12px 40px rgba(0,0,0,.35);
+      --chip:#1a1e2b; --glass:rgba(255,255,255,.06);
     }
     @media (prefers-color-scheme: light){
-      :root{ --bg:#f6f7fb; --card:#fff; --ink:#1e2330; --line:#e9e9ef; --shadow:0 10px 30px rgba(5,10,30,.08); --chip:#f1f2f7; }
+      :root{ --bg:#f6f7fb; --card:#ffffffcc; --ink:#1e2330; --line:#e9e9ef; --shadow:0 12px 30px rgba(5,10,30,.08); --chip:#f1f2f7; --glass:rgba(255,255,255,.8)}
     }
     *{box-sizing:border-box}
     html,body{height:100%}
     body{margin:0;font:15px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,Arial,"Apple Color Emoji","Segoe UI Emoji";background:
-      radial-gradient(1200px 600px at 10% -10%, rgba(111,87,233,.16), transparent 40%),
+      radial-gradient(1200px 600px at 10% -10%, rgba(111,87,233,.18), transparent 40%),
       radial-gradient(900px 500px at 110% 10%, rgba(59,46,202,.15), transparent 40%),
-      var(--bg);color:var(--ink)}
+      linear-gradient(180deg, #0f1117 0%, #0f1117 40%, #121528 100%);
+      color:var(--ink)
+    }
 
-    .wrap{max-width:1200px;margin:0 auto;padding:24px}
+    .wrap{max-width:1200px;margin:0 auto;padding:26px}
 
     /* Topbar */
     .top{display:flex;align-items:center;gap:12px}
     .brand{display:flex;align-items:center;gap:10px;font-weight:800;font-size:18px}
-    .dot{width:12px;height:12px;border-radius:50%;background:linear-gradient(135deg,var(--brand),var(--brand2));box-shadow:0 0 0 4px rgba(111,87,233,.12)}
+    .dot{width:12px;height:12px;border-radius:50%;background:linear-gradient(135deg,var(--brand),var(--brand2));box-shadow:0 0 0 6px rgba(111,87,233,.12)}
     .beta{margin-left:8px;font-size:12px;padding:2px 8px;border-radius:999px;border:1px solid var(--line);color:var(--muted);background:var(--chip)}
     .right{margin-left:auto;display:flex;gap:10px;align-items:center}
-    input.search{min-width:280px;padding:10px 12px;border-radius:999px;border:1px solid var(--line);background:var(--card);color:inherit}
-    .toggle{display:inline-flex;align-items:center;gap:8px;padding:8px 10px;border-radius:999px;border:1px solid var(--line);background:var(--card);cursor:pointer}
+    input.search{min-width:280px;padding:11px 14px;border-radius:999px;border:1px solid var(--line);background:var(--glass);backdrop-filter:blur(8px);color:inherit}
+    .toggle{display:inline-flex;align-items:center;gap:8px;padding:9px 12px;border-radius:999px;border:1px solid var(--line);background:var(--glass);backdrop-filter:blur(8px);cursor:pointer}
 
     /* Grid */
     .grid{display:grid;grid-template-columns:repeat(12,1fr);gap:16px;margin-top:18px}
-    .card{grid-column:span 4;background:var(--card);border:1px solid var(--line);border-radius:18px;box-shadow:var(--shadow);transition:transform .12s ease, box-shadow .12s ease, border-color .12s ease;position:relative;overflow:hidden}
+    .card{grid-column:span 4;background:linear-gradient(180deg,rgba(255,255,255,.06),rgba(255,255,255,.02));border:1px solid var(--line);border-radius:18px;box-shadow:var(--shadow);transition:transform .12s ease, box-shadow .12s ease, border-color .12s ease;position:relative;overflow:hidden}
     @media(max-width:1000px){.card{grid-column:span 6}}
     @media(max-width:640px){.card{grid-column:span 12}}
-    .card::after{content:"";position:absolute;inset:auto -40% -40% auto;width:180px;height:180px;background:radial-gradient(80px 80px at 50% 50%, rgba(111,87,233,.18), transparent 70%);transform:rotate(25deg)}
-    .card:hover{transform:translateY(-2px);border-color:#cfcfff}
-    .cd-hd{padding:16px 16px 0 16px;display:flex;align-items:center;gap:10px}
-    .icon{width:36px;height:36px;border-radius:12px;background:linear-gradient(135deg,var(--brand),var(--brand2));display:grid;place-items:center;color:#fff;font-weight:700}
+    .card::after{content:"";position:absolute;inset:auto -40% -40% auto;width:200px;height:200px;background:radial-gradient(80px 80px at 50% 50%, rgba(111,87,233,.18), transparent 70%);transform:rotate(25deg)}
+    .card:hover{transform:translateY(-3px);border-color:#cfcfff}
+    .cd-hd{padding:16px 16px 0 16px;display:flex;align-items:center;gap:12px}
+    .icon{width:40px;height:40px;border-radius:12px;background:linear-gradient(135deg,var(--brand),var(--brand2));display:grid;place-items:center;color:#fff;font-weight:700;font-size:18px}
     .ttl{font-weight:800}
     .desc{color:var(--muted);font-size:13px;padding:6px 16px 0 16px}
     .cd-ft{display:flex;gap:10px;align-items:center;justify-content:space-between;padding:14px 16px}
-    .btn{appearance:none;border:0;border-radius:12px;padding:10px 14px;font-weight:700;background:linear-gradient(135deg,var(--brand),var(--brand2));color:#fff;cursor:pointer}
+    .btn{appearance:none;border:0;border-radius:12px;padding:10px 14px;font-weight:700;background:linear-gradient(135deg,var(--brand),var(--brand2));color:#fff;cursor:pointer;text-decoration:none;display:inline-flex}
     .btn.ghost{background:transparent;color:var(--brand);border:1px solid var(--brand)}
+    .btn[disabled]{opacity:.6;cursor:not-allowed}
     .tag{font-size:11px;padding:2px 8px;border-radius:999px;background:var(--chip);border:1px solid var(--line);color:var(--muted)}
+
+    /* Emoji bubble */
+    .bubble{position:absolute;right:10px;top:10px;font-size:20px;opacity:.92}
 
     /* Helper */
     .hidden{display:none}
@@ -63,8 +69,9 @@
     </div>
 
     <div id="cards" class="grid">
-      <!-- NEW: Purchasing Requests -->
-      <article class="card" data-title="purchasing requests rfq vendor offers">
+      <!-- Purchasing Requests -->
+      <article class="card" data-title="purchasing requests rfq vendor offers buy price" data-candidates="purchasing/index.html|purchasing.html">
+        <div class="bubble">🛒</div>
         <div class="cd-hd">
           <div class="icon">PR</div>
           <div>
@@ -72,80 +79,128 @@
             <div class="tag">New</div>
           </div>
         </div>
-        <p class="desc">Submit part + quantity from Sales, then Purchasing adds vendor offers with price, confidence, lead time. Tabs by salesperson for fast triage.</p>
+        <p class="desc">Sales submit part + qty. Purchasing logs vendor offers (price, lead, confidence, partials) with realtime triage by salesperson.</p>
         <div class="cd-ft">
-          <a class="btn" href="purchasing/index.html">Open</a>
+          <a class="btn open" href="#">Open</a>
           <span class="tag">RFQs • Vendors • Realtime</span>
         </div>
       </article>
 
-      <!-- Certificate of Conformance (fixed link) -->
-      <article class="card" data-title="certificate of conformance coc pro cert">
+      <!-- Certificate of Conformance -->
+      <article class="card" data-title="certificate of conformance coc pro cert quality" data-candidates="coc.index.html|coc.html|pro-cert.index.html">
+        <div class="bubble">📜</div>
         <div class="cd-hd">
           <div class="icon">COC</div>
           <div class="ttl">Certificate of Conformance</div>
         </div>
-        <p class="desc">Generate, sign, and export CoCs consistent with Verified’s formatting. Includes signature scaling and print-ready layout.</p>
+        <p class="desc">Generate, sign and export CoCs to Verified’s format. Includes signature scaling and print-ready layout.</p>
         <div class="cd-ft">
-          <a class="btn" href="coc.index.html">Open</a>
+          <a class="btn open" href="#">Open</a>
           <span class="tag">Document</span>
         </div>
       </article>
 
       <!-- Commercial Invoice Generator -->
-      <article class="card" data-title="commercial invoice ci shipping customs coo">
+      <article class="card" data-title="commercial invoice ci shipping customs coo" data-candidates="ci.index.html|commercial-invoice.index.html|ci.html">
+        <div class="bubble">📦</div>
         <div class="cd-hd">
           <div class="icon">CI</div>
           <div class="ttl">Commercial Invoice Generator</div>
         </div>
-        <p class="desc">Create official, modern CIs with optional COO lines. Save templates and export to PDF for couriers.</p>
+        <p class="desc">Create official, modern CIs with optional COO. Save templates and export to PDF for couriers.</p>
         <div class="cd-ft">
-          <a class="btn" href="ci.index.html">Open</a>
+          <a class="btn open" href="#">Open</a>
           <span class="tag">Logistics</span>
         </div>
       </article>
 
       <!-- Document/PDF Editor -->
-      <article class="card" data-title="document pdf editor annotate sign whiteout">
+      <article class="card" data-title="document pdf editor annotate whiteout tools" data-candidates="doc-editor.index.html|document-editor.index.html|editor.index.html|pdf-editor.index.html">
+        <div class="bubble">🧰</div>
         <div class="cd-hd">
           <div class="icon">DX</div>
           <div class="ttl">Document/PDF Editor</div>
         </div>
-        <p class="desc">In-browser toolkit for whiteout, text, shapes and signatures. Ideal for quick doc tweaks.</p>
+        <p class="desc">In‑browser toolkit for whiteout, text, shapes and signatures. Ideal for quick doc tweaks.</p>
         <div class="cd-ft">
-          <a class="btn" href="doc-editor.index.html">Open</a>
+          <a class="btn open" href="#">Open</a>
           <span class="tag">Utilities</span>
         </div>
       </article>
 
+      <!-- E‑Signature & Stamp -->
+      <article class="card" data-title="signature signer pad stamp draw resize" data-candidates="signature.index.html|signature-pad.index.html|sign.index.html">
+        <div class="bubble">🖊️</div>
+        <div class="cd-hd">
+          <div class="icon">✒️</div>
+          <div class="ttl">E‑Signature & Stamp</div>
+        </div>
+        <p class="desc">Create/resize signatures and stamps, export on transparent background for use across docs.</p>
+        <div class="cd-ft">
+          <a class="btn open" href="#">Open</a>
+          <span class="tag">Sign</span>
+        </div>
+      </article>
+
+      <!-- Excess Part Checker -->
+      <article class="card" data-title="excess part checker search matches supabase bigquery" data-candidates="excess-checker.index.html|excess.index.html|part-checker.index.html">
+        <div class="bubble">🔎</div>
+        <div class="cd-hd">
+          <div class="icon">EX</div>
+          <div class="ttl">Excess Part Checker</div>
+        </div>
+        <p class="desc">Batch look‑up of MPNs against internal excess datasets. Exact or fuzzy, CSV import, clean UI.</p>
+        <div class="cd-ft">
+          <a class="btn open" href="#">Open</a>
+          <span class="tag">Data</span>
+        </div>
+      </article>
+
+      <!-- Auto IC Source Uploader -->
+      <article class="card" data-title="auto ic source uploader normalise map dedupe" data-candidates="auto-ic-uploader.index.html|auto-ic.index.html">
+        <div class="bubble">📤</div>
+        <div class="cd-hd">
+          <div class="icon">AU</div>
+          <div class="ttl">Auto IC Source Uploader</div>
+        </div>
+        <p class="desc">Upload and normalise supplier stock/excess files. Cleaning, mapping and de‑dupe built‑in.</p>
+        <div class="cd-ft">
+          <a class="btn open" href="#">Open</a>
+          <span class="tag">Data</span>
+        </div>
+      </article>
+
       <!-- Company Info -->
-      <article class="card" data-title="company info addresses vat bank certificates">
+      <article class="card" data-title="company info addresses vat bank certificates" data-candidates="company-info.index.html|company.index.html">
+        <div class="bubble">🏢</div>
         <div class="cd-hd">
           <div class="icon">CO</div>
           <div class="ttl">Company Info</div>
         </div>
         <p class="desc">Addresses, VAT numbers, bank details, certificates — everything in one place for quick copy/paste.</p>
         <div class="cd-ft">
-          <a class="btn" href="company-info.index.html">Open</a>
+          <a class="btn open" href="#">Open</a>
           <span class="tag">Reference</span>
         </div>
       </article>
 
-      <!-- Auto IC Source Uploader -->
-      <article class="card" data-title="auto ic source uploader excess">
+      <!-- Live Order Tracker -->
+      <article class="card" data-title="orders live tracker status finance notes" data-candidates="orders.index.html|order-tracker.index.html|tracking.index.html|orders.html">
+        <div class="bubble">📈</div>
         <div class="cd-hd">
-          <div class="icon">AU</div>
-          <div class="ttl">Auto IC Source Uploader</div>
+          <div class="icon">OT</div>
+          <div class="ttl">Live Order Tracker</div>
         </div>
-        <p class="desc">Upload and normalise supplier stock/excess files. Cleaning, mapping and dedupe built-in.</p>
+        <p class="desc">Track orders, view financials roll‑up (cost, testing, shipping, GP) and add internal notes.</p>
         <div class="cd-ft">
-          <a class="btn" href="auto-ic-uploader.index.html">Open</a>
-          <span class="tag">Data</span>
+          <a class="btn open" href="#">Open</a>
+          <span class="tag">Ops</span>
         </div>
       </article>
 
       <!-- Coming soon: Distribution Stock Monitor -->
       <article class="card" data-title="distribution stock monitor" aria-disabled="true">
+        <div class="bubble">🧭</div>
         <div class="cd-hd">
           <div class="icon">SM</div>
           <div class="ttl">Distribution Stock Monitor</div>
@@ -159,6 +214,7 @@
 
       <!-- Coming soon: Open Sales Orders -->
       <article class="card" data-title="open sales orders purchasing requests" aria-disabled="true">
+        <div class="bubble">📋</div>
         <div class="cd-hd">
           <div class="icon">SO</div>
           <div class="ttl">Open Sales Orders</div>
@@ -180,11 +236,9 @@
 
     function filter(){
       const q = (search.value||'').toLowerCase().trim();
-      let shown = 0;
       cards.forEach(c=>{
         const hit = c.dataset.title.includes(q) || c.querySelector('.ttl').textContent.toLowerCase().includes(q);
         c.classList.toggle('hidden', q && !hit);
-        if(!c.classList.contains('hidden')) shown++;
       });
       grid.style.opacity = 1;
     }
@@ -193,22 +247,43 @@
       if((e.ctrlKey||e.metaKey) && e.key.toLowerCase()==='k'){ e.preventDefault(); search.focus(); }
     });
 
-    // Compact mode (denser cards for power users)
+    // Compact mode (denser cards)
     const compactBtn = document.getElementById('compactToggle');
     compactBtn.addEventListener('click', ()=>{
       const on = document.body.classList.toggle('compact');
       compactBtn.setAttribute('aria-pressed', on?'true':'false');
     });
+
+    // Auto-resolve links so 404s disappear even if filenames differ
+    async function resolveLinks(){
+      const base = location.pathname.replace(/[^\/]*$/, '');
+      const checks = document.querySelectorAll('[data-candidates]');
+      for(const el of checks){
+        const btn = el.querySelector('.open');
+        const candidates = (el.getAttribute('data-candidates')||'').split('|').map(s=>s.trim()).filter(Boolean);
+        let found = null;
+        for(const c of candidates){
+          try{
+            const res = await fetch(c, { method:'HEAD' });
+            if(res.ok){ found = c; break; }
+          }catch(_){ /* ignore */ }
+        }
+        if(found){ btn.href = found; }
+        else{ btn.setAttribute('disabled',''); btn.textContent = 'Missing'; }
+      }
+    }
+    resolveLinks();
   </script>
 
   <style>
     /* Compact mode tweaks */
     .compact .card{border-radius:14px}
-    .compact .icon{width:32px;height:32px;border-radius:10px}
+    .compact .icon{width:34px;height:34px;border-radius:10px}
     .compact .cd-ft{padding:10px 16px}
   </style>
 </body>
 </html>
+
 
 
 
