--- a/index.html
+++ b/index.html
@@ -6,40 +6,36 @@
   <title>Verified Electronics — Tools</title>
   <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
   <style>
+    /* ===== Light theme (default) ===== */
     :root{
-      --brand:#6f57e9; --brand2:#3b2eca; --ink:#191b22; --muted:#6d7486;
-      --bg:#0f1117; --card:#11131a; --line:#222533; --shadow:0 12px 40px rgba(0,0,0,.35);
-      --chip:#1a1e2b; --glass:rgba(255,255,255,.06);
+      --brand:#6f57e9; --brand2:#3b2eca; --ink:#1e2330; --muted:#6d7486;
+      --bg:#f7f8fc; --card:#fff; --line:#e8eaf3; --shadow:0 12px 30px rgba(5,10,30,.08);
+      --chip:#f1f2f7;
     }
-    @media (prefers-color-scheme: light){
-      :root{ --bg:#f6f7fb; --card:#ffffffcc; --ink:#1e2330; --line:#e9e9ef; --shadow:0 12px 30px rgba(5,10,30,.08); --chip:#f1f2f7; --glass:rgba(255,255,255,.8)}
-    }
+
     *{box-sizing:border-box}
     html,body{height:100%}
-    body{margin:0;font:15px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,Arial,"Apple Color Emoji","Segoe UI Emoji";background:
-      radial-gradient(1200px 600px at 10% -10%, rgba(111,87,233,.18), transparent 40%),
-      radial-gradient(900px 500px at 110% 10%, rgba(59,46,202,.15), transparent 40%),
-      linear-gradient(180deg, #0f1117 0%, #0f1117 40%, #121528 100%);
-      color:var(--ink)
-    }
+    body{margin:0;font:15px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,Arial,"Apple Color Emoji","Segoe UI Emoji";background:
+      radial-gradient(900px 420px at -10% -10%, rgba(111,87,233,.08), transparent 40%),
+      radial-gradient(700px 360px at 110% 0%, rgba(59,46,202,.06), transparent 40%),
+      var(--bg);color:var(--ink)}
 
     .wrap{max-width:1200px;margin:0 auto;padding:26px}
 
     /* Topbar */
     .top{display:flex;align-items:center;gap:12px}
     .brand{display:flex;align-items:center;gap:10px;font-weight:800;font-size:18px}
-    .dot{width:12px;height:12px;border-radius:50%;background:linear-gradient(135deg,var(--brand),var(--brand2));box-shadow:0 0 0 6px rgba(111,87,233,.12)}
+    .dot{width:12px;height:12px;border-radius:50%;background:linear-gradient(135deg,var(--brand),var(--brand2));box-shadow:0 0 0 6px rgba(111,87,233,.16)}
     .beta{margin-left:8px;font-size:12px;padding:2px 8px;border-radius:999px;border:1px solid var(--line);color:var(--muted);background:var(--chip)}
     .right{margin-left:auto;display:flex;gap:10px;align-items:center}
-    input.search{min-width:280px;padding:11px 14px;border-radius:999px;border:1px solid var(--line);background:var(--glass);backdrop-filter:blur(8px);color:inherit}
-    .toggle{display:inline-flex;align-items:center;gap:8px;padding:9px 12px;border-radius:999px;border:1px solid var(--line);background:var(--glass);backdrop-filter:blur(8px);cursor:pointer}
+    input.search{min-width:280px;padding:11px 14px;border-radius:999px;border:1px solid var(--line);background:#fff;color:inherit}
+    .toggle{display:inline-flex;align-items:center;gap:8px;padding:9px 12px;border-radius:999px;border:1px solid var(--line);background:#fff;cursor:pointer}
 
     /* Grid */
     .grid{display:grid;grid-template-columns:repeat(12,1fr);gap:16px;margin-top:18px}
-    .card{grid-column:span 4;background:linear-gradient(180deg,rgba(255,255,255,.06),rgba(255,255,255,.02));border:1px solid var(--line);border-radius:18px;box-shadow:var(--shadow);transition:transform .12s ease, box-shadow .12s ease, border-color .12s ease;position:relative;overflow:hidden}
+    .card{grid-column:span 4;background:var(--card);border:1px solid var(--line);border-radius:18px;box-shadow:var(--shadow);transition:transform .12s ease, box-shadow .12s ease, border-color .12s ease;position:relative;overflow:hidden}
     @media(max-width:1000px){.card{grid-column:span 6}}
     @media(max-width:640px){.card{grid-column:span 12}}
-    .card::after{content:"";position:absolute;inset:auto -40% -40% auto;width:200px;height:200px;background:radial-gradient(80px 80px at 50% 50%, rgba(111,87,233,.18), transparent 70%);transform:rotate(25deg)}
     .card:hover{transform:translateY(-3px);border-color:#cfcfff}
     .cd-hd{padding:16px 16px 0 16px;display:flex;align-items:center;gap:12px}
     .icon{width:40px;height:40px;border-radius:12px;background:linear-gradient(135deg,var(--brand),var(--brand2));display:grid;place-items:center;color:#fff;font-weight:700;font-size:18px}
@@ -70,7 +66,7 @@
 
     <div id="cards" class="grid">
       <!-- Purchasing Requests -->
-      <article class="card" data-title="purchasing requests rfq vendor offers buy price" data-candidates="purchasing/index.html|purchasing.html">
+      <article class="card" data-title="purchasing requests rfq vendor offers buy price">
         <div class="bubble">🛒</div>
         <div class="cd-hd">
           <div class="icon">PR</div>
@@ -81,13 +77,13 @@
         </div>
         <p class="desc">Sales submit part + qty. Purchasing logs vendor offers (price, lead, confidence, partials) with realtime triage by salesperson.</p>
         <div class="cd-ft">
-          <a class="btn open" href="#">Open</a>
+          <a class="btn" href="purchasing/index.html">Open</a>
           <span class="tag">RFQs • Vendors • Realtime</span>
         </div>
       </article>
 
       <!-- Certificate of Conformance -->
-      <article class="card" data-title="certificate of conformance coc pro cert quality" data-candidates="coc.index.html|coc.html|pro-cert.index.html">
+      <article class="card" data-title="certificate of conformance coc quality">
         <div class="bubble">📜</div>
         <div class="cd-hd">
           <div class="icon">COC</div>
@@ -95,13 +91,13 @@
         </div>
         <p class="desc">Generate, sign and export CoCs to Verified’s format. Includes signature scaling and print-ready layout.</p>
         <div class="cd-ft">
-          <a class="btn open" href="#">Open</a>
+          <a class="btn" href="coc.index.html">Open</a>
           <span class="tag">Document</span>
         </div>
       </article>
 
       <!-- Commercial Invoice Generator -->
-      <article class="card" data-title="commercial invoice ci shipping customs coo" data-candidates="ci.index.html|commercial-invoice.index.html|ci.html">
+      <article class="card" data-title="commercial invoice ci shipping customs coo">
         <div class="bubble">📦</div>
         <div class="cd-hd">
           <div class="icon">CI</div>
@@ -109,13 +105,13 @@
         </div>
         <p class="desc">Create official, modern CIs with optional COO. Save templates and export to PDF for couriers.</p>
         <div class="cd-ft">
-          <a class="btn open" href="#">Open</a>
+          <a class="btn" href="commercial-invoice/index.html">Open</a>
           <span class="tag">Logistics</span>
         </div>
       </article>
 
       <!-- Document/PDF Editor -->
-      <article class="card" data-title="document pdf editor annotate whiteout tools" data-candidates="doc-editor.index.html|document-editor.index.html|editor.index.html|pdf-editor.index.html">
+      <article class="card" data-title="document pdf editor annotate whiteout tools">
         <div class="bubble">🧰</div>
         <div class="cd-hd">
           <div class="icon">DX</div>
@@ -123,13 +119,13 @@
         </div>
         <p class="desc">In‑browser toolkit for whiteout, text, shapes and signatures. Ideal for quick doc tweaks.</p>
         <div class="cd-ft">
-          <a class="btn open" href="#">Open</a>
+          <a class="btn" href="pdf-editor/index.html">Open</a>
           <span class="tag">Utilities</span>
         </div>
       </article>
 
       <!-- E‑Signature & Stamp -->
-      <article class="card" data-title="signature signer pad stamp draw resize" data-candidates="signature.index.html|signature-pad.index.html|sign.index.html">
+      <article class="card" data-title="signature signer pad stamp draw resize">
         <div class="bubble">🖊️</div>
         <div class="cd-hd">
           <div class="icon">✒️</div>
@@ -137,13 +133,13 @@
         </div>
         <p class="desc">Create/resize signatures and stamps, export on transparent background for use across docs.</p>
         <div class="cd-ft">
-          <a class="btn open" href="#">Open</a>
+          <a class="btn" href="sign/index.html">Open</a>
           <span class="tag">Sign</span>
         </div>
       </article>
 
       <!-- Excess Part Checker -->
-      <article class="card" data-title="excess part checker search matches supabase bigquery" data-candidates="excess-checker.index.html|excess.index.html|part-checker.index.html">
+      <article class="card" data-title="excess part checker search matches datasets">
         <div class="bubble">🔎</div>
         <div class="cd-hd">
           <div class="icon">EX</div>
@@ -151,41 +147,13 @@
         </div>
         <p class="desc">Batch look‑up of MPNs against internal excess datasets. Exact or fuzzy, CSV import, clean UI.</p>
         <div class="cd-ft">
-          <a class="btn open" href="#">Open</a>
+          <a class="btn" href="excess-checker/index.html">Open</a>
           <span class="tag">Data</span>
-        </div>
-      </article>
-
-      <!-- Auto IC Source Uploader -->
-      <article class="card" data-title="auto ic source uploader normalise map dedupe" data-candidates="auto-ic-uploader.index.html|auto-ic.index.html">
-        <div class="bubble">📤</div>
-        <div class="cd-hd">
-          <div class="icon">AU</div>
-          <div class="ttl">Auto IC Source Uploader</div>
-        </div>
-        <p class="desc">Upload and normalise supplier stock/excess files. Cleaning, mapping and de‑dupe built‑in.</p>
-        <div class="cd-ft">
-          <a class="btn open" href="#">Open</a>
-          <span class="tag">Data</span>
-        </div>
-      </article>
-
-      <!-- Company Info -->
-      <article class="card" data-title="company info addresses vat bank certificates" data-candidates="company-info.index.html|company.index.html">
-        <div class="bubble">🏢</div>
-        <div class="cd-hd">
-          <div class="icon">CO</div>
-          <div class="ttl">Company Info</div>
-        </div>
-        <p class="desc">Addresses, VAT numbers, bank details, certificates — everything in one place for quick copy/paste.</p>
-        <div class="cd-ft">
-          <a class="btn open" href="#">Open</a>
-          <span class="tag">Reference</span>
         </div>
       </article>
 
       <!-- Live Order Tracker -->
-      <article class="card" data-title="orders live tracker status finance notes" data-candidates="orders.index.html|order-tracker.index.html|tracking.index.html|orders.html">
+      <article class="card" data-title="orders live tracker status finance notes">
         <div class="bubble">📈</div>
         <div class="cd-hd">
           <div class="icon">OT</div>
@@ -193,13 +161,55 @@
         </div>
         <p class="desc">Track orders, view financials roll‑up (cost, testing, shipping, GP) and add internal notes.</p>
         <div class="cd-ft">
-          <a class="btn open" href="#">Open</a>
+          <a class="btn" href="order-tracker/index.html">Open</a>
           <span class="tag">Ops</span>
         </div>
       </article>
 
-      <!-- Coming soon: Distribution Stock Monitor -->
-      <article class="card" data-title="distribution stock monitor" aria-disabled="true">
+      <!-- Sales Order Confirmation -->
+      <article class="card" data-title="so sales order confirmation docs">
+        <div class="bubble">🧾</div>
+        <div class="cd-hd">
+          <div class="icon">SO</div>
+          <div class="ttl">Sales Order Confirmation</div>
+        </div>
+        <p class="desc">Generate & send clean sales order confirmations with your company details baked in.</p>
+        <div class="cd-ft">
+          <a class="btn" href="so-confirmation/index.html">Open</a>
+          <span class="tag">Docs</span>
+        </div>
+      </article>
+
+      <!-- Auto IC Source Uploader (not in repo yet) -->
+      <article class="card" data-title="auto ic source uploader normalise map dedupe" aria-disabled="true">
+        <div class="bubble">📤</div>
+        <div class="cd-hd">
+          <div class="icon">AU</div>
+          <div class="ttl">Auto IC Source Uploader</div>
+        </div>
+        <p class="desc">Upload and normalise supplier stock/excess files. Cleaning, mapping and de‑dupe built‑in.</p>
+        <div class="cd-ft">
+          <button class="btn ghost" disabled>Coming soon</button>
+          <span class="tag">Data</span>
+        </div>
+      </article>
+
+      <!-- Company Info (not in repo yet) -->
+      <article class="card" aria-disabled="true" data-title="company info addresses vat bank certificates">
+        <div class="bubble">🏢</div>
+        <div class="cd-hd">
+          <div class="icon">CO</div>
+          <div class="ttl">Company Info</div>
+        </div>
+        <p class="desc">Addresses, VAT numbers, bank details, certificates — everything in one place for quick copy/paste.</p>
+        <div class="cd-ft">
+          <button class="btn ghost" disabled>Coming soon</button>
+          <span class="tag">Reference</span>
+        </div>
+      </article>
+
+      <!-- Distribution Stock Monitor (coming soon) -->
+      <article class="card" aria-disabled="true" data-title="distribution stock monitor">
         <div class="bubble">🧭</div>
         <div class="cd-hd">
           <div class="icon">SM</div>
@@ -209,20 +219,6 @@
         <div class="cd-ft">
           <button class="btn ghost" disabled>Coming soon</button>
           <span class="tag">Research</span>
-        </div>
-      </article>
-
-      <!-- Coming soon: Open Sales Orders -->
-      <article class="card" data-title="open sales orders purchasing requests" aria-disabled="true">
-        <div class="bubble">📋</div>
-        <div class="cd-hd">
-          <div class="icon">SO</div>
-          <div class="ttl">Open Sales Orders</div>
-        </div>
-        <p class="desc">Single view of all open SOs with promised ship dates, testing status and blockers.</p>
-        <div class="cd-ft">
-          <button class="btn ghost" disabled>Coming soon</button>
-          <span class="tag">Ops</span>
         </div>
       </article>
     </div>
@@ -237,7 +233,7 @@
     function filter(){
       const q = (search.value||'').toLowerCase().trim();
       cards.forEach(c=>{
-        const hit = c.dataset.title.includes(q) || c.querySelector('.ttl').textContent.toLowerCase().includes(q);
+        const hit = c.dataset.title?.includes(q) || c.querySelector('.ttl').textContent.toLowerCase().includes(q);
         c.classList.toggle('hidden', q && !hit);
       });
       grid.style.opacity = 1;
@@ -253,26 +249,6 @@
       const on = document.body.classList.toggle('compact');
       compactBtn.setAttribute('aria-pressed', on?'true':'false');
     });
-
-    // Auto-resolve links so 404s disappear even if filenames differ
-    async function resolveLinks(){
-      const base = location.pathname.replace(/[^\/]*$/, '');
-      const checks = document.querySelectorAll('[data-candidates]');
-      for(const el of checks){
-        const btn = el.querySelector('.open');
-        const candidates = (el.getAttribute('data-candidates')||'').split('|').map(s=>s.trim()).filter(Boolean);
-        let found = null;
-        for(const c of candidates){
-          try{
-            const res = await fetch(c, { method:'HEAD' });
-            if(res.ok){ found = c; break; }
-          }catch(_){ /* ignore */ }
-        }
-        if(found){ btn.href = found; }
-        else{ btn.setAttribute('disabled',''); btn.textContent = 'Missing'; }
-      }
-    }
-    resolveLinks();
   </script>
 
   <style>
